--- a/index.html
+++ b/index.html
@@ -1825,7 +1825,95 @@ window.addEventListener('load', function() {
 }
 </style>
 
+<!-- Put this in your <body> where you want the navbar -->
+<header>
+    <div class="jc-top-navbar" id="jcTopNavbar" style="background-color: #000 !important;">
+        <div class="jc-top-inner">
+            <a href="index.html" class="jc-top-logo">
+                <img src="assets/New-images/logo/Asset-4.svg" alt="Logo">
+            </a>
+            <ul class="jc-top-menu">
+                <li><a href="./index.html">Home</a></li>
+                <li class="has-dropdown">
+                    <a href="#">Know More</a>
+                    <ul class="tp-submenu">
+                        <li><a href="./about-us.html">About Us</a></li>
+                           <li><a href="./blogs.html">Blogs</a></li>
+                           <li><a href="./casestudy.html"> Case Studies</a></li> 
+                           <li><a href="./career.html">Career</a></li>
+                    </ul>
+                </li>
+                <li class="has-dropdown">
+                    <a href="#">Services</a>
+                    <ul class="tp-submenu">
+                        <li><a href="/search-engine-optimization.html">SEO</a></li>
+                        <li><a href="/social-media-marketing.html">SMM Service</a></li>
+                        <li><a href="/googleads.html">Google Ads Service</a></li>
+                        <li><a href="/website-development.html">Website Development</a></li>
+                        <li><a href="/visual-production.html">Visual Production</a></li>
+                        <li><a href="/branding.html">Branding</a></li>
+                    </ul>
+                </li>
+                <li class="has-dropdown">
+                    <a href="#">Contact</a>
+                    <ul class="tp-submenu">
+                        <li><a href="/contact.html">Contact</a></li>
+                        <li><a href="./career.html">Career</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
 
+    <div class="jc-scroll-navbar" id="jcScrollNavbar">
+        <div class="jc-scroll-inner">
+            <a href="index.html" class="jc-scroll-logo">
+                <img src="assets/New-images/logo/Asset-4.svg" alt="Logo">
+            </a>
+            <ul class="jc-inline-menu" id="jcInlineMenu">
+                <li><a href="./index.html">Home</a></li>
+                <li class="has-dropdown">
+                    <a href="#">Know More</a>
+                    <ul class="tp-submenu">
+                        <li><a href="./about-us.html">About Us</a></li>
+                        <li><a href="./blogs.html">Blogs</a></li>
+                        <li><a href="./casestudy.html">Case Studies</a></li>
+                         <li><a href="./career.html">Career</a></li>
+                    </ul>
+                </li>
+                <li class="has-dropdown">
+                    <a href="#">Services</a>
+                    <ul class="tp-submenu">
+                        <li><a href="./search-engine-optimization.html">SEO</a></li>
+                        <li><a href="./social-media-marketing.html">SMM Service</a></li>
+                        <li><a href="./google-ads.html">Google Ads Service</a></li>
+                        <li><a href="./website-development.html">Website Development</a></li>
+                        <li><a href="./visual-production.html">Visual Production</a></li>
+                        <li><a href="./branding.html">Branding</a></li>
+                    </ul>
+                </li>
+                <li class="has-dropdown">
+                    <a href="#">Contact</a>
+                    <ul class="tp-submenu">
+                        <li><a href="./contact.html">Contact</a></li>
+                         <li><a href="./career.html">Career</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <button class="tp-header-2-bar" id="jcHamburgerBtn">
+                <svg class="hamburger-icon open" width="24" height="18" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <line x1="2" y1="3" x2="30" y2="3" stroke="currentColor" stroke-width="3" stroke-linecap="round"/>
+                    <line x1="2" y1="12" x2="30" y2="12" stroke="currentColor" stroke-width="3" stroke-linecap="round"/>
+                    <line x1="2" y1="21" x2="30" y2="21" stroke="currentColor" stroke-width="3" stroke-linecap="round"/>
+                </svg>
+                <svg class="hamburger-icon close" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <line x1="4" y1="4" x2="20" y2="20" stroke="currentColor" stroke-width="3" stroke-linecap="round"/>
+                    <line x1="20" y1="4" x2="4" y2="20" stroke="currentColor" stroke-width="3" stroke-linecap="round"/>
+                </svg>
+            </button>
+        </div>
+    </div>
+</header>
 
 <!-- Put this at the END of your <body>, right before </body> -->
 <script>
