--- a/index.html
+++ b/index.html
@@ -1827,7 +1827,7 @@ window.addEventListener('load', function() {
 
 <!-- Put this in your <body> where you want the navbar -->
 <header>
-    <div class="jc-top-navbar" id="jcTopNavbar" style="background-color: #000 !important;">
+    <div class="jc-top-navbar" id="jcTopNavbar" >
         <div class="jc-top-inner">
             <a href="index.html" class="jc-top-logo">
                 <img src="assets/New-images/logo/Asset-4.svg" alt="Logo">
