--- a/career.html
+++ b/career.html
@@ -559,7 +559,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 if (!container || !sourceElement) return;
                 const heart = document.createElement('div');
                 heart.className = 'heart';
-                heart.innerHTML = '🖤';
+                heart.innerHTML = '';
                 const rect = sourceElement.getBoundingClientRect();
                 const containerRect = container.getBoundingClientRect();
                 heart.style.left = (rect.left - containerRect.left + rect.width / 2) + 'px';
