--- a/about-us.html
+++ b/about-us.html
@@ -1842,7 +1842,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
              
 
                <!-- banner area start -->
-<div class="design-video-area" style="padding-top: 20px;">
+<div class="design-video-area" >
     <div class="design-video-thumb">
         <video class="w-100" data-speed=".7" autoplay muted loop playsinline>
             <source src="assets/New-images/video/VC_logo animation 3.webm" type="video/mp4">
@@ -2386,7 +2386,7 @@ To be a trusted digital marketing leader recognized for delivering strategic exc
                         </div>
                     </div>
                     <div class="col-xl-5">
-                        <div class="design-project-content pl-200">
+                        <div class="design-project-content pl-100">
                            
                             <span class="tp_reveal_anim" style="color: var( --tp-common-black);">  Mission</span>
                             <p class="vision-mission-text tp_reveal_anim">
