--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@ window.addEventListener('load', function() {
                 if (!container || !sourceElement) return;
                 const heart = document.createElement('div');
                 heart.className = 'heart';
-                heart.innerHTML = '';
+                heart.innerHTML = '❤';
                 const rect = sourceElement.getBoundingClientRect();
                 const containerRect = container.getBoundingClientRect();
                 heart.style.left = (rect.left - containerRect.left + rect.width / 2) + 'px';
@@ -1827,7 +1827,7 @@ window.addEventListener('load', function() {
 
 <!-- Put this in your <body> where you want the navbar -->
 <header>
-    <div class="jc-top-navbar" id="jcTopNavbar" >
+    <div class="jc-top-navbar" id="jcTopNavbar">
         <div class="jc-top-inner">
             <a href="index.html" class="jc-top-logo">
                 <img src="assets/New-images/logo/Asset-4.svg" alt="Logo">
@@ -1839,8 +1839,8 @@ window.addEventListener('load', function() {
                     <ul class="tp-submenu">
                         <li><a href="./about-us.html">About Us</a></li>
                            <li><a href="./blogs.html">Blogs</a></li>
-                           <li><a href="./casestudy.html"> Case Studies</a></li> 
-                          
+                           <li><a href="./casestudy.html">Case Studies</a></li>
+                             <li><a href="./career.html">Career</a></li>
                     </ul>
                 </li>
                 <li class="has-dropdown">
@@ -1878,7 +1878,6 @@ window.addEventListener('load', function() {
                         <li><a href="./about-us.html">About Us</a></li>
                         <li><a href="./blogs.html">Blogs</a></li>
                         <li><a href="./casestudy.html">Case Studies</a></li>
-                      
                     </ul>
                 </li>
                 <li class="has-dropdown">
