--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Viral cat Digital Agency | Digital Marketing Agency Thrissur</title>
+    <title>Viral cat Digital Agency: Digital Marketing Company Thrissur</title>
     <meta name="description" content="Viral Cat Digital Agency is a leading digital marketing agency in Thrissur offering SEO, SMM, Google Ads, and web development services to grow your business.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="https://viralcatmeow.com/"/>
@@ -4221,7 +4221,7 @@ Create a fast, responsive, and user-friendly website that reflects your brand. W
                                                             </svg>
                                                         </i>
                                                     </div>
-                                                    <p>Based on 24 reviews on Clutch</p>
+                                                    <p>Based on 24 reviews on GMBh</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -4235,7 +4235,7 @@ Create a fast, responsive, and user-friendly website that reflects your brand. W
                                     <div class="swiper-slide">
                                         <div class="design-testimonial-item">
                                             <div class="design-testimonial-author">
-                                                <h4>Andrew Gross</h4>
+                                                <h4>Ram Mohan</h4>
                                                 <span>CEO & Co-Founder</span>
                                             </div>
                                             <div class="design-testimonial-review d-flex align-items-end">
@@ -4269,16 +4269,15 @@ Create a fast, responsive, and user-friendly website that reflects your brand. W
                                                 </div>
                                             </div>
                                             <div class="design-testimonial-text">
-                                                <p>"I was really impressed with their speed and how quickly things
-                                                    moved."</p>
+                                                <p>"I’m really happy with Viral Cat Digital Agency. After they started handling my ads, I began getting quality leads and the conversion rate improved a lot. The results are clearly visible compared to my previous campaigns."</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="design-testimonial-item">
                                             <div class="design-testimonial-author">
-                                                <h4>Matthew Blake</h4>
-                                                <span>Chief Executive Officer</span>
+                                                <h4>Suneesh</h4>
+                                                <span>General Manager</span>
                                             </div>
                                             <div class="design-testimonial-review d-flex align-items-end">
                                                 <h4>5.0</h4>
@@ -4311,14 +4310,14 @@ Create a fast, responsive, and user-friendly website that reflects your brand. W
                                                 </div>
                                             </div>
                                             <div class="design-testimonial-text">
-                                                <p>"Their speed and swift them execution truly is impressed me this project."</p>
+                                                <p>"I had approached so many digital marketing agencies before, but none of them understood my business properly. Viral Cat Digital Agency is the first team that gave me a strategy that actually worked. I’m fully satisfied with their approach and professionalism."</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="design-testimonial-item">
                                             <div class="design-testimonial-author">
-                                                <h4>Jonathan Cross</h4>
+                                                <h4>Sreeresh P</h4>
                                                 <span>Founder & Chief Executive</span>
                                             </div>
                                             <div class="design-testimonial-review d-flex align-items-end">
@@ -4352,14 +4351,14 @@ Create a fast, responsive, and user-friendly website that reflects your brand. W
                                                 </div>
                                             </div>
                                             <div class="design-testimonial-text">
-                                                <p>"I couldn't believe how i quickly fix everything came in together."</p>
+                                                <p>"I already had an in-house digital marketing team, but the results were not that great. After switching to Viral Cat Digital Agency, the performance increased drastically. I’m genuinely impressed with the improvements in leads, sales, and brand visibility."</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="design-testimonial-item">
                                             <div class="design-testimonial-author">
-                                                <h4>Benjamin Hayes</h4>
+                                                <h4>Rahul C K</h4>
                                                 <span>CEO & Head of Innovation</span>
                                             </div>
                                             <div class="design-testimonial-review d-flex align-items-end">
@@ -4393,14 +4392,14 @@ Create a fast, responsive, and user-friendly website that reflects your brand. W
                                                 </div>
                                             </div>
                                             <div class="design-testimonial-text">
-                                                <p>"I was blown away by how fast and smoothly things moved the item."</p>
+                                                <p>"My business has multiple locations, and offline marketing wasn’t giving me enough reach. After partnering with Viral Cat Digital Agency, I started getting more business from every location through digital campaigns. Their targeting is spot-on."</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="design-testimonial-item">
                                             <div class="design-testimonial-author">
-                                                <h4>William Tate</h4>
+                                                <h4>David Thomas</h4>
                                                 <span>Managing Partner & CEO</span>
                                             </div>
                                             <div class="design-testimonial-review d-flex align-items-end">
@@ -4434,7 +4433,7 @@ Create a fast, responsive, and user-friendly website that reflects your brand. W
                                                 </div>
                                             </div>
                                             <div class="design-testimonial-text">
-                                                <p>"I was amazed by their efficiency and how fast everything progressed."</p>
+                                                <p>"My company website had very low traffic for months. After the team at Viral Cat Digital Agency worked on SEO and ads, the traffic increased consistently. I’m seeing steady growth every week, and it feels great to finally see results."</p>
                                             </div>
                                         </div>
                                     </div>
@@ -4578,7 +4577,7 @@ Create a fast, responsive, and user-friendly website that reflects your brand. W
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="design-copyright-text text-center text-md-start mb-10">
-                                    <p>© 2025 VIRAL  CAT, All rights reserved.</p>
+                                    <p>© 2025 VIRAL CAT, All rights reserved.</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
