--- a/index.html
+++ b/index.html
@@ -4551,7 +4551,7 @@ Create a fast, responsive, and user-friendly website that reflects your brand. W
                                                 <div class="design-footer-widget design-footer-col-2">
                                                     <h4 class="design-footer-widget-title sm">Call us</h4>
                                                     <div class="design-footer-widget-info">
-                                                        <a class="tp-line-white" href="tel:+917736402151">+917736402151</a>
+                                                        <a class="tp-line-white" href="tel:+917736402151">+91-97781 89712</a>
                                                     </div>
                                                 </div>
                                             </div>
