--- a/googleads.html
+++ b/googleads.html
@@ -4003,11 +4003,15 @@ Increase app installs and engagements with smart, targeted ad placements.       
                                     <div class="design-footer-right pb-60">
                                         <div class="row align-items-center">
                                             <div class="col-xl-4">
-                                                <div class="design-footer-widget design-footer-col-2">
+                                                 <div class="design-footer-widget design-footer-col-2">
                                                     <h4 class="design-footer-widget-title sm">Call us</h4>
                                                     <div class="design-footer-widget-info">
-                                                        <a class="tp-line-white" href="tel:+917736402151">+917736402151</a>
+                                                        <a class="tp-line-white" href="tel:+917736402151">+91-97781 89712</a> <br> <br>
+
+                                                        <h4 class="design-footer-widget-title sm">Tel. Phone</h4>
+                                                         <a class="tp-line-white" href="tel:+917736402151">0487-2961410</a>
                                                     </div>
+                                                     
                                                 </div>
                                             </div>
                                             <div class="col-xl-4">
