--- a/contact.html
+++ b/contact.html
@@ -2270,8 +2270,12 @@ Reach out to us for enquiries, support, or project discussions.</p>
                                                 <div class="design-footer-widget design-footer-col-2">
                                                     <h4 class="design-footer-widget-title sm">Call us</h4>
                                                     <div class="design-footer-widget-info">
-                                                        <a class="tp-line-white" href="tel:+917736402151">+917736402151</a>
+                                                        <a class="tp-line-white" href="tel:+917736402151">+91-97781 89712</a> <br> <br>
+
+                                                        <h4 class="design-footer-widget-title sm">Tel. Phone</h4>
+                                                         <a class="tp-line-white" href="tel:+917736402151">0487-2961410</a>
                                                     </div>
+                                                     
                                                 </div>
                                             </div>
                                             <div class="col-xl-4">
