--- a/index.html
+++ b/index.html
@@ -4551,8 +4551,12 @@ Create a fast, responsive, and user-friendly website that reflects your brand. W
                                                 <div class="design-footer-widget design-footer-col-2">
                                                     <h4 class="design-footer-widget-title sm">Call us</h4>
                                                     <div class="design-footer-widget-info">
-                                                        <a class="tp-line-white" href="tel:+917736402151">+91-97781 89712</a>
+                                                        <a class="tp-line-white" href="tel:+917736402151">+91-97781 89712</a> <br> <br>
+
+                                                        <h4 class="design-footer-widget-title sm">Tel. Phone</h4>
+                                                         <a class="tp-line-white" href="tel:+917736402151">0487-2961410</a>
                                                     </div>
+                                                     
                                                 </div>
                                             </div>
                                             <div class="col-xl-4">
