--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Viral cat Digital Agency: Digital Marketing Company Thrissur</title>
+    <title>Viral Cat Digital Agency : Digital marketing agency Thrissur</title>
     <meta name="description" content="Viral Cat Digital Agency is a leading digital marketing agency in Thrissur offering SEO, SMM, Google Ads, and web development services to grow your business.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="https://viralcatmeow.com/"/>
