--- a/casestudy.html
+++ b/casestudy.html
@@ -892,15 +892,26 @@ window.addEventListener('load', function() {
 
         /* Popup Container */
         .popup-container {
-            background: white;
+            /* background: white;
             border-radius: 20px;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
             max-width: 820px;
             width: min(92%, 820px);
             position: relative;
             padding: 48px;
-            margin: 0 auto; /* center within flex container */
+            margin: 0 auto; 
             transform: translateY(0) scale(0.7);
+            display: flex;
+            overflow: hidden; */
+             background: white;
+            border-radius: 16px;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+            max-width: 900px;
+            width: 90%;
+            position: relative;
+            padding: 0;
+            transform: scale(0.7);
+            opacity: 0;
             display: flex;
             overflow: hidden;
         }
