--- a/blog-detail.html
+++ b/blog-detail.html
@@ -1835,8 +1835,9 @@ window.addEventListener('load', function() {
                 <li class="has-dropdown">
                     <a href="#">Know More</a>
                     <ul class="tp-submenu">
-                        <li><a href="/about-us.html">About Us</a></li>
-                           <li><a href="/blogs.html">Blogs</a></li>
+                        <li><a href="./about-us.html">About Us</a></li>
+                           <li><a href="./blogs.html">Blogs</a></li>
+                           <li><a href="./casestudy.html">Case Studies</a></li>
                     </ul>
                 </li>
                 <li class="has-dropdown">
