--- a/blogs.html
+++ b/blogs.html
@@ -1621,7 +1621,8 @@ window.addEventListener('load', function() {
                     <a href="#">Know More</a>
                     <ul class="tp-submenu">
                         <li><a href="./about-us.html">About Us</a></li>
-                           <li><a href="/blogs.html">Blogs</a></li>
+                           <li><a href="./blogs.html">Blogs</a></li>
+                           <li><a href="./casestudy.html">Case Studies</a></li>
                     </ul>
                 </li>
                 <li class="has-dropdown">
