--- a/blog-detail.html
+++ b/blog-detail.html
@@ -1855,6 +1855,7 @@ window.addEventListener('load', function() {
                     <a href="#">Contact</a>
                     <ul class="tp-submenu">
                         <li><a href="/contact.html">Contact</a></li>
+                        <li><a href="./career.html">Career</a></li>
                     </ul>
                 </li>
             </ul>
