--- a/blogs.html
+++ b/blogs.html
@@ -1639,7 +1639,8 @@ window.addEventListener('load', function() {
                 <li class="has-dropdown">
                     <a href="#">Contact</a>
                     <ul class="tp-submenu">
-                        <li><a href="./contact.html">Contact</a></li>
+                        <li><a href="/contact.html">Contact</a></li>
+                        <li><a href="./career.html">Career</a></li>
                     </ul>
                 </li>
             </ul>
