blog details page issue

--- a/blog-detail.html
+++ b/blog-detail.html
@@ -1864,7 +1864,7 @@ window.addEventListener('load', function() {
 
     <div class="jc-scroll-navbar" id="jcScrollNavbar">
         <div class="jc-scroll-inner">
-            <a href="index.html" class="jc-scroll-logo">
+            <a href="/index.html" class="jc-scroll-logo">
                <img src="/assets/New-images/logo/Asset-4.svg" alt="Logo">
             </a>
             <ul class="jc-inline-menu" id="jcInlineMenu">
