url isseu fixed

--- a/blog-detail.html
+++ b/blog-detail.html
@@ -244,7 +244,7 @@ window.addEventListener('load', function() {
             <div class="tp-offcanvas-2-left left-box">
                 <div class="tp-offcanvas-2-left-wrap d-flex justify-content-between align-items-center">
                     <div class="tp-offcanvas-2-logo">
-                        <a href="index.html">
+                        <a href="/index.html">
                             <img class="logo-1" data-width="140" src="/assets/New-images/logo/Viral_cat (1).png" alt="">
                             <img class="logo-2" data-width="140" src="/assets/New-images/logo/Viral_cat (1).png" alt="">
                         </a>
@@ -1827,7 +1827,7 @@ window.addEventListener('load', function() {
 <header>
     <div class="jc-top-navbar" id="jcTopNavbar">
         <div class="jc-top-inner">
-            <a href="index.html" class="jc-top-logo">
+            <a href="/index.html" class="jc-top-logo">
                 <img src="/assets/New-images/logo/Asset-4.svg" alt="Logo">
             </a>
             <ul class="jc-top-menu">
