--- a/blog-detail.html
+++ b/blog-detail.html
@@ -1835,9 +1835,9 @@ window.addEventListener('load', function() {
                 <li class="has-dropdown">
                     <a href="#">Know More</a>
                     <ul class="tp-submenu">
-                        <li><a href="./about-us.html">About Us</a></li>
-                           <li><a href="./blogs.html">Blogs</a></li>
-                           <li><a href="./casestudy.html">Case Studies</a></li>
+                        <li><a href="/about-us.html">About Us</a></li>
+                           <li><a href="/blogs.html">Blogs</a></li>
+                           <li><a href="/casestudy.html">Case Studies</a></li>
                     </ul>
                 </li>
                 <li class="has-dropdown">
@@ -1855,7 +1855,7 @@ window.addEventListener('load', function() {
                     <a href="#">Contact</a>
                     <ul class="tp-submenu">
                         <li><a href="/contact.html">Contact</a></li>
-                        <li><a href="./career.html">Career</a></li>
+                        <li><a href="/career.html">Career</a></li>
                     </ul>
                 </li>
             </ul>
